--- a/src/styles/blue.css
+++ b/src/styles/blue.css
@@ -1,3 +1,8 @@
+.chat .message.mention {
+  background: #4777d152 !important;
+  border-right: 5px solid #4777d1 !important;
+}
+
 .lame-button {
   filter: grayscale(1) !important;
 }
