--- a/src/styles/teal.css
+++ b/src/styles/teal.css
@@ -1,3 +1,8 @@
+.chat .message.mention {
+  background: #00a1c052 !important;
+  border-right: 5px solid #00a1c0 !important;
+}
+
 .lame-button {
   filter: grayscale(1) !important;
 }
