--- a/src/styles/pink.css
+++ b/src/styles/pink.css
@@ -3,6 +3,14 @@
   border-right: 5px solid #d546d5 !important;
 }
 
+.song .progress {
+  background: #d546d5 !important;
+}
+
+.current-song .details {
+  color: #ffffff !important;
+}
+
 .lame-button {
   filter: grayscale(1) !important;
 }
