--- a/src/styles/blue.css
+++ b/src/styles/blue.css
@@ -3,7 +3,7 @@
   border-right: 5px solid #4777d1 !important;
 }
 
-.song .progress {
+.song .progress, #ts_slider {
   background: #4777d1 !important;
 }
 
