--- a/src/styles/pink.css
+++ b/src/styles/pink.css
@@ -3,7 +3,7 @@
   border-right: 5px solid #d546d5 !important;
 }
 
-.song .progress {
+.song .progress, #ts_slider {
   background: #d546d5 !important;
 }
 
