--- a/src/styles/teal.css
+++ b/src/styles/teal.css
@@ -3,7 +3,8 @@
   border-right: 5px solid #00a1c0 !important;
 }
 
-.song .progress, #ts_slider {
+.song .progress, #ts_slider,
+::-webkit-scrollbar-thumb:hover {
   background: #00a1c0 !important;
 }
 
