Add styles to invite dj button.

--- a/src/styles/blue.css
+++ b/src/styles/blue.css
@@ -4,39 +4,28 @@
 }
 
 .song .progress, #ts_slider,
-::-webkit-scrollbar-thumb:hover {
-  background: #4777d1 !important;
+::-webkit-scrollbar-thumb:hover { background: #4777d1 !important; }
+
+.current-song .details { color: #ffffff !important; }
+
+.lame-button { filter: grayscale(1) !important; }
+.awesome-button { 
+  filter: hue-rotate(130deg) brightness(0.8) saturate(2) !important; 
 }
 
-.current-song .details {
-  color: #ffffff !important;
-}
-
-.lame-button {
-  filter: grayscale(1) !important;
-}
-.awesome-button {
-  filter: hue-rotate(130deg) brightness(0.8) saturate(2) !important;
-}
-
-.become-dj,
-.song-details {
-  filter: hue-rotate(180deg) !important;
-}
+.become-dj, .invite-dj, .song-details { filter: hue-rotate(180deg) !important; }
 
 .header-logo,
 #buddyListHeader,
 .tab-item:active, 
 .tab-item.selected,
 .favorite-star.favorited,
-#privateChatIcon.open .chatIcon {
-  filter: hue-rotate(180deg) brightness(0.6) saturate(2) !important;
+#privateChatIcon.open .chatIcon { 
+  filter: hue-rotate(180deg) brightness(0.6) saturate(2) !important; 
 }
 
 .tab-item:active .tab-icon, 
-.tab-item.selected .tab-icon {
-  filter: invert(1);
-}
+.tab-item.selected .tab-icon { filter: invert(1); }
 
 .become-dj,
 .tab-item:active .tab-title, 
