--- a/src/styles/teal.css
+++ b/src/styles/teal.css
@@ -4,25 +4,16 @@
 }
 
 .song .progress, #ts_slider,
-::-webkit-scrollbar-thumb:hover {
-  background: #00a1c0 !important;
-}
+::-webkit-scrollbar-thumb:hover { background: #00a1c0 !important; }
 
-.current-song .details {
-  color: #ffffff !important;
-}
+.current-song .details { color: #ffffff !important; }
 
-.lame-button {
-  filter: grayscale(1) !important;
-}
+.lame-button { filter: grayscale(1) !important; }
 .awesome-button {
   filter: hue-rotate(90deg) brightness(0.8) saturate(2) !important;
 }
 
-.become-dj,
-.song-details {
-  filter: hue-rotate(130deg) !important;
-}
+.become-dj, .invite-dj, .song-details { filter: hue-rotate(130deg) !important; }
 
 .header-logo,
 #buddyListHeader,
@@ -34,9 +25,7 @@
 }
 
 .tab-item:active .tab-icon, 
-.tab-item.selected .tab-icon {
-  filter: invert(1);
-}
+.tab-item.selected .tab-icon { filter: invert(1); }
 
 .become-dj,
 .tab-item:active .tab-title, 
