--- a/src/themes/dark.css
+++ b/src/themes/dark.css
@@ -1,17 +1,26 @@
+/*
+  Dark Mode
+  Text Color: #ffffff;
+  Main BG:    #343434;
+  Light BG:   #3a3a3a;
+  Border:     #545454;
+  Accent:     #e1bb22;
+  Red:        #ff0000;
+  Green:      #00ff00;
+*/
+
 /* Main Background */
-.tab-pane, #songs, 
-.room-info-intro, .message-history,
-.song-list, .guest-list, #buddyList, 
-.sliding-nav-pane, .conversations-list,
-.guestOptionsContainer, 
-.guestOptionsContainer .options,
+.tab-pane, #songs, .header-bar, .tab-item:not(.selected),
+.room-info-intro, .message-history, .song-list, .guest-list,
+#buddyList, .sliding-nav-pane, .conversations-list,
+.guestOptionsContainer, .guestOptionsContainer .options,
 .chat .message:nth-child(even),
 .guest-list>:nth-child(even):not(.separator),
 .striped-list>:nth-child(even):not(.separator), 
 .song-list>ul>:nth-child(even):not(.separator),
 .message-history>:nth-child(even):not(.separator) {
   color: #ffffff !important;
-  background: #3a3a3a !important;
+  background: #343434 !important;
 }
 
 /* Alt Background */
@@ -22,24 +31,21 @@
 .song-list>ul>:nth-child(odd):not(.separator),
 .message-history>:nth-child(odd):not(.separator)  {
   color: #ffffff !important;
-  background: #343434 !important;
+  background: #3a3a3a !important;
 }
 
 /* Border Color Resets */
-.flat-button, .message-view,
-.chat .message, .striped-list, 
-.song-list .song, .guest-list .guest,
-.room-info-intro, .room-info-wrap { border-color: #545454 !important; }
+.flat-button, .message-view, .chat .message, .striped-list, 
+.song-list .song, .guest-list .guest, .room-info-intro, 
+.room-info-wrap { border-color: #545454 !important; }
 .conversation-view { border-top: 1px solid #545454 !important; }
 
-/* Mention Styling */
+/* Chat Styling */
 .chat .message.mention {
   background: #e1bb2252 !important;
   border-right: 5px solid #e1bb22 !important;
 }
-.chat .message.snag,
-.chat .message.leave, 
-.chat .message.action {
+.chat .message.snag, .chat .message.leave, .chat .message.action {
   background: #ff000040 !important;
   border-right: 5px solid #ff000055 !important;
 }
@@ -55,18 +61,16 @@
 /* Transparent Overrides */
 .avatar-head { background-color: transparent !important; }
 
-/* Popped White Text */
-.sliding-nav-pane-title,
-.tabbed-panel .separator .text,
-.queue-message, .default-message,
-.room-tab .room-name, .song .title,
-#playlist-display .text, .filter.btn,
+/* Popped Text */
+.sliding-nav-pane-title, .tabbed-panel .separator .text,
+.queue-message, .default-message, .room-tab .room-name,
+.song .title, #playlist-display .text, .filter.btn,
 .message-view a, .tabbed-panel a, .tabbed-panel a:visited {
   color: #ffffff !important;
   text-shadow: 0 1px 1px #000 !important;
 }
 
-/* Underline Linkss */ 
+/* Underline Links */ 
 .message-view a, .tabbed-panel a, .tabbed-panel a:visited {
   text-decoration: none !important;
   border-bottom: 1px dotted !important;
@@ -77,30 +81,29 @@
 .panel-button {
   border: none !important;
   box-shadow: none !important;
+  text-shadow: none !important;
   background: transparent !important;
 }
+.panel-button:not(.disabled) { color: #ffffff !important; }
 .panel-button:not(:hover) { opacity: 0.8 !important; }
 
-/* Invert Dark Buttons */
-#buddyListNipple,
-.chatsound.mention,
-#upload-button button,
-.tabbed-panel button.back,
-.room-info-wrap .options-menu .nib,
-#playlist-display .playlist-queue-inset,
-.playlist-go-top, .playlist-open-options { filter: invert(1) !important; }
+/* Style Buttons */
+#buddyListNipple, .chatsound.mention, #upload-button button,
+.tabbed-panel button.back, .room-info-wrap .options-menu .nib,
+#playlist-display .playlist-queue-inset, .playlist-go-top, 
+.playlist-open-options { filter: invert(1) contrast(0.7) !important; }
+/* Flatten Buttons */
+.playlist-go-top { background-position: 0 -326px !important; }
+.playlist-open-options { background-position: 0 -216px !important; }
+#upload-button button { background-position: 0 -30px !important; }
 
 /* Input Bars */
-.message-input-view,
-.floating-panel-bar,
-.floating-panel-header, 
-.tabbed-panel .separator,
-.sliding-nav-pane-header,
-.sliding-nav-pane .separator {
+.message-input-view, .floating-panel-bar, .floating-panel-header, 
+.tabbed-panel .separator, .sliding-nav-pane-header, .sliding-nav-pane .separator {
   box-shadow: none !important;
   border-top: 1px solid #545454 !important;
-  border-bottom: 1px solid #353535 !important;
-  background: linear-gradient(to bottom, #3a3a3a, #353535) !important;
+  border-bottom: 1px solid #343434 !important;
+  background: linear-gradient(to bottom, #3a3a3a, #343434) !important;
 }
 
 /* PM Options Menu */
@@ -121,15 +124,14 @@
   box-shadow: none !important;
   border-color: transparent !important;
 }
-.chat-bar .divider,
-#normal-mode .divider { display: none !important; }
+.chat-bar .divider, #normal-mode .divider { display: none !important; }
 
 /* Text Inputs */
 #chat-form { left: 40px; }
 .message-input, #song-search-input {
   border: none !important;
   color: #ffffff !important;
-  background: #252525 !important;
+  background: #545454 !important;
   box-shadow: inset 0 0 0 1px #545454, 0 1px 0 0 #545454 !important;
 }
 
