--- a/styles/blue.sass
+++ b/styles/blue.sass
@@ -1,6 +1,7 @@
 $color-song: #ffffff
 $color-icon: #000000
-$color-main: #4777d1
+$color-main: #3e88ff
+$color-dark: #2361de
 $hue-rotate: 130deg
 $brightness: 0.8
 $saturation: 2
