--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,7 +1,8 @@
 $color-song: #ffffff
 $color-icon: #000000
-$color-main: #00a1c0
-$hue-rotate: 90deg
+$color-main: #d546d5
+$color-dark: #d546d5
+$hue-rotate: 200deg
 $brightness: 0.8
 $saturation: 2
 
