--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,7 +1,8 @@
 $color-song: #ffffff
 $color-icon: #000000
-$color-main: #d546d5
-$hue-rotate: 200deg
+$color-main: #00a1c0
+$color-dark: #00a1c0
+$hue-rotate: 90deg
 $brightness: 0.8
 $saturation: 2
 
