Add scrollbar styling to themes.

--- a/themes/_header.sass
+++ b/themes/_header.sass
@@ -23,3 +23,15 @@
 
 .tab-item:not(.selected):not(:hover) .tab-title
   color: $color-text-dark !important
+
+
+// scrollbars 
+
+::-webkit-scrollbar
+  width: 10px
+::-webkit-scrollbar-track
+  background: $color-base
+::-webkit-scrollbar-thumb
+  background: $color-border
+::-webkit-scrollbar-thumb:hover
+  background: $color-text-dark
