--- a/themes/_mixins.sass
+++ b/themes/_mixins.sass
@@ -14,7 +14,7 @@ $gradient-3: lighten($color-base, 16%)
   background-image: linear-gradient(to bottom, $gradient-1, $gradient-2) !important
 
 %text-input
+  border: none !important
   box-shadow: none !important
   color: $color-text !important
   background: $color-base-alt !important
-  border: 1px solid $color-base !important
