--- a/themes/night.sass
+++ b/themes/night.sass
@@ -1,5 +1,5 @@
 $color-base: #141414 // background color
-$color-text: #e8e8e8 // main font color
+$color-text: #cacaca // main font color
 
 $color-main: #e1bb22 // accent color matches gold
 
