Update message colors.

--- a/themes/night.sass
+++ b/themes/night.sass
@@ -5,12 +5,12 @@ $color-text: #cacaca
 // accent color
 $color-accent: #e1bb22
 
-$color-good: #00ff00
-$color-bad:  #ff0000
+$color-good: #37a737
+$color-bad:  #af1f1f
 
 // chat message colors
 $color-action: $color-bad // dj removal etc
-$color-onsnag: $color-bad
+$color-onsnag: #a73775
 $color-onjoin: $color-good
 $color-onleft: $color-bad
 $color-onding: $color-accent
