Add toggle icon to options menu logo

--- a/turnStyles.sass
+++ b/turnStyles.sass
@@ -8,6 +8,7 @@
 
   > h3
     color: gold
+    user-select: none
 
   > *
     margin: 0 5px
@@ -27,14 +28,12 @@
 
 #ts_panel
   button
-    float: right
+    border: none
     color: #eaeaea
-    margin-top: 7px
-    padding: 5px 10px
+    padding: 2px 5px
     font-weight: bold
-    border-radius: 5px
+    font-style: italic
     background: transparent
-    border: 1px solid #676767
 
 #ts_window
   div
@@ -68,7 +67,7 @@
     text-transform: uppercase
 
   .ts_credits
-    padding-bottom: 10px
+    padding: 5px 0 10px
     > * 
       margin-right: 5px
     a
