Begin updating themes to include context panels.

--- a/themes/_panels.sass
+++ b/themes/_panels.sass
@@ -6,8 +6,8 @@
 
 .floating-panel-bar,
 .floating-panel-header
-  border-top: 1px solid lighten($color-panels, 9%) !important
-  border-bottom: 1px solid lighten($color-panels, 9%) !important
+  border-top: 1px solid $panel-border !important
+  border-bottom: 1px solid $panel-border !important
 
 .tabbed-panel .separator
   text-shadow: none !important
