--- a/themes/dark.sass
+++ b/themes/dark.sass
@@ -2,11 +2,11 @@
 $color-bg:   #343434
 $color-text: #eaeaea
 
-// accent color
-$color-accent: #e1bb22
-
 $color-good: #37a737
 $color-bad:  #af1f1f
+
+// accent color
+$color-accent: #e1bb22
 
 // chat message colors
 $color-action: $color-bad // dj removal etc
@@ -15,12 +15,6 @@ $color-onjoin: $color-good
 $color-onleft: $color-bad
 $color-onding: $color-accent
 
-// controls inverting elements
-// set invert to 0 to disable, 1 to enable
-// brighness to 1 to disable, 10 to enable
-$invert-dark: 1 
-$brightness: 10
-
 // generated variables
 $color-bg-alt: lighten($color-bg, 3%)   // lighter background
 $color-border: lighten($color-bg, 9%)   // matching border color
@@ -28,6 +22,16 @@ $color-subtle: darken($color-text, 15%) // darker, subtle text
 
 // floating panel colors
 $color-panels: $color-border
+$panel-border: lighten($color-border, 9%)
+
+// controls inverting elements
+// set invert to 0 to disable, 1 to enable
+// brighness to 1 to disable, 10 to enable
+// remove invert() to disable panels reset
+$invert-dark: 1 
+$brightness: 10
+$inverted-panels: invert($color-panels)
+$inverted-border: invert($panel-border)
 
 // define our main stylings
 %content-main
