Add depth to remaining styles.

--- a/styles/pink.sass
+++ b/styles/pink.sass
@@ -1,7 +1,7 @@
 $color-song: #ffffff
 $color-icon: #000000
-$color-main: #d546d5
-$color-dark: #d546d5
+$color-main: #e658eb
+$color-dark: #c031b7
 $hue-rotate: 200deg
 $brightness: 0.8
 $saturation: 2
