--- a/styles/teal.sass
+++ b/styles/teal.sass
@@ -1,7 +1,7 @@
 $color-song: #ffffff
 $color-icon: #000000
-$color-main: #00a1c0
-$color-dark: #00a1c0
+$color-main: #00a5bc
+$color-dark: #00799c
 $hue-rotate: 90deg
 $brightness: 0.8
 $saturation: 2
